bundled_metadata/force-app/main/default/objects/Transfer_Order_Scheduler__mdt/Transfer_Order_Scheduler__mdt.object-meta.xml
<CustomObject>
    <label>Transfer Order Scheduler</label>
    <pluralLabel>Transfer Order Schedulers</pluralLabel>
</CustomObject>