bundled_metadata/force-app/main/default/objects/Transfer_Order_Scheduler__mdt/fields/Time_of_day__c.field-meta.xml
<CustomField>
    <fullName>Time_of_day__c</fullName>
    <label>Time of day</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>