bundled_metadata/force-app/main/default/objects/Transfer_Order_Scheduler__mdt/fields/Wholesaler_Name__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Name__c</fullName>
    <label>Wholesaler Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>