bundled_metadata/force-app/main/default/objects/Transfer_Order_Scheduler__mdt/listViews/Transfer_Order_Scheduler_View.listView-meta.xml
<ListView>
    <fullName>Transfer_Order_Scheduler_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Wholesaler_Name__c</columns>
    <columns>Is_Hourly__c</columns>
    <columns>Time_of_day__c</columns>
    <filterScope>Everything</filterScope>
    <label>Transfer Order Scheduler View</label>
    <language>en_US</language>
</ListView>